manifest/golang.yaml

apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000

---

# DEPLOYMENT
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - image: golang-backend:latest
        name: backend
        # command: ["/bin/sh"]
        # args: [ "-c", "while true; do sleep 100000; done"]
        imagePullPolicy: IfNotPresent
        volumeMounts:
          - name: db-secret
            mountPath: "/var/run/secrets"
            readOnly: true
      volumes:
        - name: db-secret
          secret:
            # Provide the name of the ConfigMap you want to mount.
            secretName: db-secret
            # An array of keys from the ConfigMap to create as files
            items:
            - key: "db-password"
              path: "db-password"
