manifest/mariadb.yaml

apiVersion: v1
kind: Service
metadata:
  name: mariadb
spec:
  ports:
    - port: 3306
  selector:
    app: mariadb

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
spec:
  selector:
    matchLabels:
      app: mariadb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
        - image: mariadb:10-focal
          name: mariadb
          ports:
            - containerPort: 3306
              name: mariadb
          volumeMounts:
            - name: mariadb-storage
              mountPath: /var/lib/mysql
          # args: 
          #   - --default-authentication-plugin=mysql_native_password
      volumes:
        - name: mariadb-storage
          persistentVolumeClaim:
            claimName: mariadb-claim


# DOESN'T WORK 
# env:
#   - name: MYSQL_DATABASE
#     valueFrom: 
#       configMapRef:
#         name: mariadb-config
#         key: MYSQL_DATABASE
#   - name: MYSQL_ROOT_PASSWORD
#     valueFrom: 
#       configMapRef:
#         name: mariadb-config
#         key: MYSQL_ROOT_PASSWORD
