manifest/nginx.yaml

apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      volumes:
        - name: nginx-pod-storage
          configMap:
            name: nginx-config
            items:
              - key: default.conf
                path: default.conf
      containers:
        - name: nginx
          image: nginx:latest
          # command: ["/bin/sh"]
          # args: [ "-c", "while true; do sleep 100000; done"]
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: "/etc/nginx/conf.d"
              name: nginx-pod-storage
